Update bundles/org.openhab.binding.pirateweather/src/main/java/org/openhab/binding/pirateweather/internal/handler/PirateWeatherWeatherAndForecastHandler.java
Co-authored-by: lsiepel <leosiepel@gmail.com>
Signed-off-by: Scott Hanson <computergeek1507@users.noreply.github.com>